--- a/CompRepro_2020.Rmd
+++ b/CompRepro_2020.Rmd
@@ -25,8 +25,14 @@ To add a chunk either click on the green Insert button and choose R or hit Comma
 
 2) Please describe one of the ways that Wilson et. al. suggest is a good practice for computational reproducibility and how a tool like R can be used. Write your answer below.
 
+The paper by Wilson et. al. describe, among other things, that providing the exact code (with dependencies and documentation) as well as version control can greatly improve computational reproducibility. This allows researchers to simply upload their code repository to a place like github, where other researchers can easily clone it and run the same scripts to reproduce the results of the paper (this is fairly common nowadays in my field). A tool like R, but of course any other programming language, in combination with git can therefore assist with computational reproducibility, especially as it is open-source and widely used in the scientific community, which facilitates the process of reproducing computational work.
+
 
 3) Add a code chunk and find the square root of 4 to the 13th power. If you are unsure of what command to use, google it. 
+
+```{r}
+sqrt(4^13)
+```
 
 
 4) Push this homework to the GitHub repository for the homework. 
